@@ -124,7 +124,8 @@ LOCAL_SRC_FILES := $(SDL_PATH)/src/main/android/SDL_android_main.c \
 	../../../../../../src/WidgetSlider.cpp \
 	../../../../../../src/WidgetSlot.cpp \
  	../../../../../../src/WidgetTabControl.cpp \
-	../../../../../../src/WidgetTooltip.cpp
+	../../../../../../src/WidgetTooltip.cpp \
+	../../../../../../src/XPScaling.cpp
 
 LOCAL_SHARED_LIBRARIES := SDL2 SDL2_image SDL2_mixer SDL2_ttf
 
